tests/e2e/tests/pilot/testdata/networking/v1alpha3/rule-503test-update-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-bound-route
spec:
  hosts:
    - uk.bookinfo.com
  gateways:
  - istio-ingressgateway # pinned to ingress gateway only
  http:
    - route:
      - destination:
          host: c
          subset: v3
          port:
            number: 80
        weight: 50
      - destination:
          host: c
          subset: v4
          port:
            number: 80
        weight: 50
